[package]
name = "kvs"
version = "0.1.0"
authors = ["Leslie Su <3530611790@qq.com>"]
description = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Make use of "Cargo search" for the crates we need
# Search for the docs for crates in the crates.io
[dependencies]
clap = { version = "4.5.2", features = ["cargo"] }

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
